@@ -36,6 +36,9 @@
 - Fixed bug with key selection (when going back to C)<br/>
 - Code cleanup and general improvements/fixes<br/>
 - Improved dialog shown when quitting and there are unsaved changes (now offer to save them)<br/>
+- Fixed deleting control events when selection was done from right to left<br/>
+  (thanks to Alexis Archambault for finding this bug!)<br/>
+- Fixed preferences dialog not being translated<br/>
 - Started adding support for custom keys (hidden for now)<br/><br/>
 
 <hr/>
